--- a/PoE2_AntiLock.csproj
+++ b/PoE2_AntiLock.csproj
@@ -26,7 +26,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Resources\" />
+      <Folder Include="resources\" />
     </ItemGroup>
 
 </Project>
