Update repo name

--- a/PoE2_AntiFreeze.csproj
+++ b/PoE2_AntiFreeze.csproj
@@ -6,7 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <ApplicationIcon>kekw.ico</ApplicationIcon>
-        <AssemblyName>AntiLock</AssemblyName>
+        <AssemblyName>AntiFreeze</AssemblyName>
     </PropertyGroup>
 
     <PropertyGroup>
